--- a/webtools/testopia/template/en/default/testopia/case/show.html.tmpl
+++ b/webtools/testopia/template/en/default/testopia/case/show.html.tmpl
@@ -231,6 +231,7 @@
 <br><br>
 <h3>Reports</h3>
 <img src="tr_case_reports.cgi?case_id=[% case.id FILTER none %]&type=status-breakdown">
+<a href="tr_query.cgi?current_tab=case&report=1">General Reports</a>
 [%##### Attachments #####%]
 <br><br>
 <h3>Attachments</h3>
