--- a/webtools/testopia/template/en/default/testopia/run/show.html.tmpl
+++ b/webtools/testopia/template/en/default/testopia/run/show.html.tmpl
@@ -185,6 +185,10 @@
   <input type="submit" name="action" value="Clone Run With These Cases" />
 <a href="tr_list_caseruns.cgi?[% table.get_query_part FILTER none %]">Update Multiple</a>
 <a href="tr_list_cases.cgi?run_id=[% run.id FILTER none %]">List Cases</a>
+[%##### Reports #####%]
+<br><br>
+<h3>Reports</h3>
+<a href="tr_query.cgi?current_tab=run&report=1">General Reports</a>
 <br><br>
 [%##### Categories and Tags #####%]
 <h3>CC, Coverage, Tags</h3>
