--- a/webtools/testopia/template/en/default/testopia/search/run.html.tmpl
+++ b/webtools/testopia/template/en/default/testopia/search/run.html.tmpl
@@ -9,16 +9,69 @@
   # implied. See the License for the specific language governing
   # rights and limitations under the License.
   #
-  # The Original Code is the Bugzilla Test Runner System.
+  # The Original Code is the Bugzilla Testopia System.
   #
-  # The Initial Developer of the Original Code is Maciej Maczynski.
-  # Portions created by Maciej Maczynski are Copyright (C) 2001
-  # Maciej Maczynski. All Rights Reserved.
+  # The Initial Developer of the Original Code is Greg Hendricks.
+  # Portions created by Greg Hendricks are Copyright (C) 2001
+  # Greg Hendricks. All Rights Reserved.
   #
   # Contributor(s): Greg Hendricks <ghendricks@novell.com>
   #%]
 
-<form action="tr_list_runs.cgi" method="GET">  
+[% IF report %]
+<form action="tr_run_reports.cgi" method="GET">    
+<p>
+  Choose one or more fields as your axes, and then refine your set of 
+  runs using the rest of the form.
+</p>
+
+
+<table align="center">
+  <tr>
+    <td>
+    </td>
+    <td align="center">
+      <b>Horizontal Axis:</b>
+          [% PROCESS select sel = { name  => 'x_axis_field',
+                                list      => run.report_columns } %]
+
+    </td>
+  </tr>
+
+  <tr>
+    <td valign="middle" align="center">
+      <b>Vertical Axis:</b><br>
+          [% PROCESS select sel = { name  => 'y_axis_field',
+                                list      => run.report_columns } %]
+
+    </td>
+    <td width="150" height="150">
+      <table border="1" width="100%" height="100%">
+        <tr>
+          <td align="center" valign="middle">
+            <b>Multiple Tables:</b><br>
+          [% PROCESS select sel = { name  => 'z_axis_field',
+                                list      => run.report_columns } %]
+
+          </td>
+        </tr>
+      </table>
+    </td>
+  </tr>
+</table>
+
+<hr>
+
+<br>
+<input type="submit" value="Submit">
+<input type="hidden" name="format" value="table">
+<input type="hidden" name="report_action" value="data">
+<input type="hidden" name="report" value="1" />
+<hr>
+[% ELSE %]
+<form action="tr_list_runs.cgi" method="GET">
+[% END %]
+
   <input type="hidden" name="current_tab" value="[% current_tab FILTER none %]" />
 <fieldset>
     <legend><strong>Product</strong></legend>
