--- a/webtools/testopia/template/en/default/testopia/case/show.html.tmpl
+++ b/webtools/testopia/template/en/default/testopia/case/show.html.tmpl
@@ -50,32 +50,6 @@
 <script src="testopia/dojo/dojo.js" type="text/javascript"></script>
 <script type="text/javascript">
 
-    function fillSelects (data){
-        var xmldocroot = data.documentElement;
-        var selected = xmldocroot.getElementsByTagName('selected');
-        var comps = document.getElementById("components");
-        comps.options.length = 0;
-        for (i=0; i< selected.length; i++){
-          var id = selected[i].childNodes[0].firstChild.nodeValue;
-          var name = selected[i].childNodes[1].firstChild.nodeValue;
-          var myOp = new Option(name, id);
-          addOption(comps,myOp);
-        }
-        
-        var nonselected = xmldocroot.getElementsByTagName('nonselected');
-        var pick = document.getElementById("comp_pick");
-        pick.options.length = 0;
-        for (i=0; i< nonselected.length; i++){
-          var id = nonselected[i].childNodes[0].firstChild.nodeValue;
-          var name = nonselected[i].childNodes[1].firstChild.nodeValue;
-          var myOp = new Option(name, id);
-          addOption(pick,myOp);
-        }
-
-        document.getElementById("addComp").disabled = false;
-        document.getElementById("deleteComp").disabled = false;
-
-    }
     function updateComponent(comp_id, action){
         if (comp_id == 0)
           return;
@@ -85,9 +59,41 @@
         dojo.io.bind({
             url:     "tr_show_case.cgi",
             content: {  component_id: comp_id, case_id: [% case.id FILTER none %], action: action },
-            load:    function(type, data, evt){ fillSelects(data);},
+            load:    function(type, data, evt){ 
+                var comps = document.getElementById("components");
+                comps.options.length = 0;
+                for (i in data){
+                  var myOp = new Option(data[i].name, data[i].id);
+                  addOption(comps,myOp);
+                }
+                
+                document.getElementById("addComp").disabled = false;
+                document.getElementById("deleteComp").disabled = false;
+                },
             error:   function(type, error){ alert("ERROR");},
-            mimetype: "text/xml"
+            mimetype: "text/json"
+        });
+    }
+    function getProdComps(product){
+        document.getElementById("comp_pick").disabled = true;
+        document.getElementById("addComp").disabled = true;
+        document.getElementById("deleteComp").disabled = true;
+        dojo.io.bind({
+            url:   "tr_show_case.cgi",
+            content: {  product_id: product, case_id: [% case.id FILTER none %], action: "getcomps" },
+            load:  function(type, data, evt){
+                     var comps = document.getElementById("comp_pick");
+                     comps.options.length = 0;
+                     for (i in data){
+                       var myOp = new Option(data[i].name, data[i].id);
+                       addOption(comps, myOp);
+                     }
+                     document.getElementById("comp_pick").disabled = false;
+                     document.getElementById("addComp").disabled = false;
+                     document.getElementById("deleteComp").disabled = false;
+                   },
+            error: function(type, error){ alert("ERROR");},
+            mimetype: "text/json"
         });
     }
     
@@ -189,13 +195,27 @@
   <tr>
     <td align="left">
     <table>
-      <tr><td>
+      <tr><th align="right">Product</th>
+      <td>
+      [% PROCESS select sel = { name      => 'prod_pick',
+                                list      => user.get_selectable_products,
+                                default   => case.get_product_ids.0,
+                                events    => 'onChange="getProdComps(this.value)"',
+                                accesskey => 'p' } %]
+      </td>
+    </tr>
+    <tr>
+      <th align="right">Component</th>
+      <td>
       [% PROCESS select sel = { name      => 'comp_pick',
                                 list      => case.get_selectable_components
                                 accesskey => 'p' } %]
       <input type="button" id="addComp" value="Add" onClick="updateComponent(document.getElementById('comp_pick').value, 'addcomponent')">
-      </td></tr>
-      <tr><td>
+      </td>
+    </tr>
+    <tr>
+      <td>&nbsp;</td>
+      <td>
     [% SET components = case.components %]
    
       [% PROCESS select sel = { name      => 'components',
