--- a/webtools/testopia/template/en/default/testopia/caserun/filter.html.tmpl
+++ b/webtools/testopia/template/en/default/testopia/caserun/filter.html.tmpl
@@ -1,11 +1,23 @@
-<form method="GET" action="[% table.url_loc FILTER none %]">
+<form method="GET" action="[% table.url_loc FILTER none %]" id="filter_form">
 <input type="hidden" name="run_id" value="[% run.id FILTER none %]" />
 [% query = table.get_query_part %]
 <div class="bz_row_header" style="font-size:12pt; font-weight: bold;">
-  <img src="[% query.match('assignee') ? 'testopia/img/td.gif' : 'testopia/img/tr.gif' %]" id="ft" onclick="_sr(document.getElementById('filter'),document.getElementById('ft'))">
+  <img src="[% query.match('assignee') AND NOT hide_filter ? 'testopia/img/td.gif' : 'testopia/img/tr.gif' %]" id="cft" onclick="_sr(document.getElementById('caserun_report'),document.getElementById('cft'))">
+  <a href="javascript:_sr(document.getElementById('caserun_report'),document.getElementById('cft'))" style="text-decoration:none;">Reports</a>
+</div>
+<div id="caserun_report" [% query.match('assignee') AND NOT hide_filter ? 'style="display:block"' : 'style="display:none"' %]>
+[% PROCESS "testopia/search/report-matrix.html.tmpl" 
+   obj = table.list.0
+%]
+<p align="right">
+  <input type="button" value="Report" onclick="document.getElementById('filter_form').action='tr_caserun_reports.cgi';document.getElementById('filter_form').submit();">
+</p>
+</div>
+<div class="bz_row_header" style="font-size:12pt; font-weight: bold;">
+  <img src="[% query.match('assignee') AND NOT hide_filter ? 'testopia/img/td.gif' : 'testopia/img/tr.gif' %]" id="ft" onclick="_sr(document.getElementById('filter'),document.getElementById('ft'))">
   <a href="javascript:_sr(document.getElementById('filter'),document.getElementById('ft'))" style="text-decoration:none;">Filter</a>
 </div>
-<div id="filter" [% query.match('assignee')? 'style="display:block"' : 'style="display:none"' %]>
+<div id="filter" [% query.match('assignee') AND NOT hide_filter ? 'style="display:block"' : 'style="display:none"' %]>
 <table>
   <tr class="bz_row_header">
     <th>Status</th>
@@ -35,6 +47,12 @@
           </td>
         </tr>
         <tr>
+          <th align="right">Requirement</th>
+          <td><input type="hidden" name="requirement_type" value="substring" />
+              <input name="requirement">
+          </td>
+        </tr>
+        <tr>
           <th align="right">Environment</th>
           <td><input type="hidden" name="environment_type" value="anyexact" />
               <input name="environment">
@@ -52,7 +70,7 @@
   <tr>
     <td valign="top">
       [% PROCESS select sel = { name => "case_run_status_id", 
-                                list => run.current_caseruns.0.get_status_list,
+                                list => table.list.0.get_status_list,
                                 elements => 6,
                                 mult => 1, }
       %]
@@ -76,7 +94,7 @@
     </td>
     <td valign="top">
       [% PROCESS select sel = { name => "priority_id", 
-                                list => run.current_caseruns.0.case.get_priority_list,
+                                list => table.list.0.case.get_priority_list,
                                 elements => 6,
                                 mult => 1, }
       %]
