--- a/webtools/testopia/template/en/default/testopia/search/advanced.html.tmpl
+++ b/webtools/testopia/template/en/default/testopia/search/advanced.html.tmpl
@@ -41,6 +41,7 @@
 [% tabs = [ { name => 'case', description => "Find Test Cases" },
             { name => 'run',  description => "Find Test Runs"  },
             { name => 'plan', description => "Find Test Plans" },
+            { name => 'case_run', description => "Find Test Case-Runs" },
             { name => 'environment', description => "Find Test Run Environments" }, ] %]
             
 <script src="testopia/dojo/dojo.js" type="text/javascript"></script>
@@ -65,8 +66,12 @@
         if (tab == 'run'){
           var milestones = xmldocroot.getElementsByTagName('milestone');
           var builds     = xmldocroot.getElementsByTagName('build');
+          var environment  = xmldocroot.getElementsByTagName('environment');
+
           var selMilestone = document.getElementById("milestone");
           var selBuild     = document.getElementById("build");
+          var selEnv       = document.getElementById("environment");
+
           selBuild.options.length = 0;
           selMilestone.options.length = 0;
           for (i=0; i< milestones.length; i++){
@@ -81,7 +86,63 @@
             var myOp = new Option(name, id);
             addOption(selBuild,myOp);
           }
+          for (i=0; i< environment.length; i++){
+            var id = environment[i].firstChild.nodeValue;
+            var name = environment[i].firstChild.nodeValue;
+            var myOp = new Option(name, id);
+            addOption(selEnv,myOp);
+          }
 
+        }
+        if (tab == 'case_run'){
+          var milestones = xmldocroot.getElementsByTagName('milestone');
+          var builds     = xmldocroot.getElementsByTagName('build');
+          var components = xmldocroot.getElementsByTagName('component');
+          var categories = xmldocroot.getElementsByTagName('category');
+          var environment = xmldocroot.getElementsByTagName('environment');
+
+          var selMilestone = document.getElementById("milestone");
+          var selBuild     = document.getElementById("build");
+          var selComponent = document.getElementById("component");
+          var selCategory  = document.getElementById("category");
+          var selEnv       = document.getElementById("environment");
+                    
+          selComponent.options.length = 0;
+          selCategory.options.length = 0;
+          selBuild.options.length = 0;
+          selMilestone.options.length = 0;
+          
+          for (i=0; i< milestones.length; i++){
+            var id = milestones[i].firstChild.nodeValue;
+            var name = milestones[i].firstChild.nodeValue;
+            var myOp = new Option(name, id);
+            addOption(selMilestone,myOp);
+          }
+          for (i=0; i< builds.length; i++){
+            var id = builds[i].firstChild.nodeValue;
+            var name = builds[i].firstChild.nodeValue;
+            var myOp = new Option(name, id);
+            addOption(selBuild,myOp);
+          }
+          for (i=0; i< components.length; i++){
+            var id = components[i].firstChild.nodeValue;
+            var name = components[i].firstChild.nodeValue;
+            var myOp = new Option(name, id);
+            addOption(selComponent,myOp);
+          }
+          for (i=0; i< categories.length; i++){
+            var id = categories[i].firstChild.nodeValue;
+            var name = categories[i].firstChild.nodeValue;
+            var myOp = new Option(name, id);
+            addOption(selCategory,myOp);
+          }
+          for (i=0; i< environment.length; i++){
+            var id = environment[i].firstChild.nodeValue;
+            var name = environment[i].firstChild.nodeValue;
+            var myOp = new Option(name, id);
+            addOption(selEnv,myOp);
+          }
+        
         }
         if (tab == 'case' || tab == ''){
           var components = xmldocroot.getElementsByTagName('component');
@@ -150,6 +211,8 @@
   [% PROCESS testopia/search/plan.html.tmpl %]
 [% ELSIF current_tab == 'run' %]
   [% PROCESS testopia/search/run.html.tmpl %]
+[% ELSIF current_tab == 'case_run' %]
+  [% PROCESS testopia/search/caserun.html.tmpl %]
 [% ELSIF current_tab == 'environment' %]
   [% PROCESS testopia/search/environment.html.tmpl %]
 [% ELSE %]
