--- a/webtools/testopia/template/en/default/testopia/search/plan.html.tmpl
+++ b/webtools/testopia/template/en/default/testopia/search/plan.html.tmpl
@@ -20,54 +20,9 @@
 
 [% IF report %]
 <form action="tr_plan_reports.cgi" method="GET">    
-<p>
-  Choose one or more fields as your axes, and then refine your set of 
-  plans using the rest of the form.
-</p>
-
-
-<table align="center">
-  <tr>
-    <td>
-    </td>
-    <td align="center">
-      <b>Horizontal Axis:</b>
-          [% PROCESS select sel = { name  => 'x_axis_field',
-                                list      => plan.report_columns } %]
-
-    </td>
-  </tr>
-
-  <tr>
-    <td valign="middle" align="center">
-      <b>Vertical Axis:</b><br>
-          [% PROCESS select sel = { name  => 'y_axis_field',
-                                list      => plan.report_columns } %]
-
-    </td>
-    <td width="150" height="150">
-      <table border="1" width="100%" height="100%">
-        <tr>
-          <td align="center" valign="middle">
-            <b>Multiple Tables:</b><br>
-          [% PROCESS select sel = { name  => 'z_axis_field',
-                                list      => plan.report_columns } %]
-
-          </td>
-        </tr>
-      </table>
-    </td>
-  </tr>
-</table>
-
-<hr>
-
-<br>
-<input type="submit" value="Submit">
-<input type="hidden" name="format" value="table">
-<input type="hidden" name="report_action" value="data">
-<input type="hidden" name="report" value="1" />
-<hr>
+[% PROCESS "testopia/search/report-matrix.html.tmpl" 
+   obj = plan
+%]   
 [% ELSE %]
 <form action="tr_list_plans.cgi" method="GET">
 [% END %]
