Bug 358466 - Report Broken Web Site is now in stable releases of Firefox, so we update the text to show this.

--- a/webtools/hendrix/template/index.html.tmpl
+++ b/webtools/hendrix/template/index.html.tmpl
@@ -57,7 +57,7 @@ function onLoad() {
 
 <p>This is Hendrix - the mozilla.org system for leaving quick feedback on and suggestions for our products. Looking for support? <a href="http://www.mozilla.org/support/">See our support pages</a>.</p>
 
-<p>If you are using the latest developer release of Firefox, and have noticed a website is broken, please instead pull down the Help menu and select "Report Broken Web Site". If you have a specific and detailed bug report, please file it in 
+<p>If you are using Firefox, and have noticed a website is broken, please instead pull down the Help menu and select "Report Broken Web Site". If you have a specific and detailed bug report, please file it in 
 <a href="https://bugzilla.mozilla.org/enter_bug.cgi">Bugzilla</a>.</p>
 
 <p>Due to the number of suggestions and comments that are received, you should not expect a direct response. But your views are important to us, so please do let us know what you think.</p>
