--- a/webtools/testopia/template/en/default/testopia/caserun/short-form-header.html.tmpl
+++ b/webtools/testopia/template/en/default/testopia/caserun/short-form-header.html.tmpl
@@ -44,7 +44,12 @@
                            events  => "onChange='chBld($index, this.value, \"$caserun.status\", $caserun.id)'"}
      %]
     </td>
-    <td align="left" valign="top"><input name="env_[% index %]" id="env_[% index %]" size="5" value="[% caserun.environment_id FILTER none %]"><a href="tr_query.cgi?current_tab=environment" target="blank"><img src="testopia/img/env_lookup.png" align="middle"></a>&nbsp;<image src="testopia/img/confirm.png" align="middle" onClick='chEnv([% index %], document.getElementById("env_[% index %]").value, "[% caserun.status %]", [% caserun.id %], [% caserun.environment_id %])' style="cursor:pointer"></td>
+    <td align="left" valign="top" width="80px">
+      <input name="env_[% index %]" id="env_[% index %]" size="5" value="[% caserun.environment_id FILTER none %]">
+      <a href="tr_query.cgi?current_tab=environment" target="blank">
+        <img src="testopia/img/env_lookup.png" align="middle" title="Search for Environments"></a>&nbsp;
+        <img src="testopia/img/confirm.png" align="middle" title="Update Environment" onClick='chEnv([% index %], document.getElementById("env_[% index %]").value, "[% caserun.status %]", [% caserun.id %], [% caserun.environment_id %])' style="cursor:pointer">
+    </td>
 
     <td align="left" valign="top"><span id="own[% index %]"><a href="mailto:[% caserun.assignee.login %]">[% caserun.assignee.login %]</a></span></td>
     <td align="left" valign="top"><span id="tdb[% index %]"><a href="mailto:[% caserun.testedby.login %]">[% caserun.testedby.login %]</a></span></td>
