--- a/webtools/testopia/template/en/default/testopia/caserun/table.html.tmpl
+++ b/webtools/testopia/template/en/default/testopia/caserun/table.html.tmpl
@@ -60,7 +60,7 @@
     [% PROCESS "testopia/caserun/short-form-header.html.tmpl" %]
   </tr>
   <tr class="[% loop.count % 2 == 0 ? "bz_row_odd" : "bz_row_even" %]">
-  	<td colspan="11"><div class="ae_s" style="margin-left:13px;margin-right:29px;"><b>Summary:</b>&nbsp;
+  	<td colspan="11"><div class="ae_s" style="margin-left:13px;margin-right:29px;"><b><a href="[% link %]summary" style="text-decoration:none;">Summary</a>:</b>&nbsp;
         [% caserun.case.summary FILTER html %]</div></td>
   <!-- ### START BODY FOR CASE [% caserun.case.id %] ### -->
   <tr id="body_caserun_[% index %]" class="[% loop.count % 2 == 0 ? "bz_row_odd" : "bz_row_even" %]">
