--- a/webtools/testopia/template/en/default/testopia/run/form.html.tmpl
+++ b/webtools/testopia/template/en/default/testopia/run/form.html.tmpl
@@ -46,7 +46,7 @@
       <td><input name="manager" value="[% run.manager.login ? run.manager.login : user.login FILTER html %]"></td>
       <th align="right">Environment</td>
       <td><input name="environment" id="environment" value="[% run.environment.id FILTER none %]" />
-      	  <a href="tr_query.cgi?current_tab=environment" target="blank"><img src="testopia/img/env_lookup.png" align="middle"></a>
+      	  <a href="tr_query.cgi?current_tab=environment" target="blank"><img src="testopia/img/env_lookup.png" title="Search for Environments" align="middle"></a>
           <a href="tr_new_environment.cgi" target="_blank">New</a>
       </td>
       
