removed quoteUrls FILTER from case form as it was messing up hyperlinks.

--- a/webtools/testopia/template/en/default/testopia/case/form.html.tmpl
+++ b/webtools/testopia/template/en/default/testopia/case/form.html.tmpl
@@ -178,28 +178,28 @@
   <h3>Set Up</h3>
   <textarea cols="122" rows="15" style="border: 1px solid #000000;" height="300"
             id="tcsetup" name="tcsetup" dojoType="Editor2" focusOnLoad="false">
-[% case.text.setup FILTER quoteUrls %]</textarea>     
+[% case.text.setup FILTER none %]</textarea>     
   <p align="right">
     <input type="SUBMIT" name="action" class="tr_button" value="[% action FILTER html %]">
   </p>
     <h3>Break Down</h3>
   <textarea cols="122" rows="15" style="border: 1px solid #000000;" height="300"
             id="tcbreakdown" name="tcbreakdown" dojoType="Editor2" focusOnLoad="false">
-[% case.text.breakdown FILTER quoteUrls %]</textarea>     
+[% case.text.breakdown FILTER none %]</textarea>     
   <p align="right">
     <input type="SUBMIT" name="action" class="tr_button" value="[% action FILTER html %]">
   </p>
   <h3>Action</h3>
   <textarea cols="122" rows="15" style="border: 1px solid #000000;" height="300"
             id="tcaction" name="tcaction" dojoType="Editor2" focusOnLoad="false">
-[% case.text.action FILTER quoteUrls %]</textarea>     
+[% case.text.action FILTER none %]</textarea>     
   <p align="right">
     <input type="SUBMIT" name="action" class="tr_button" value="[% action FILTER html %]">
   </p>
   <h3>Expected Results</h3>
   <textarea cols="122" rows="15" style="border: 1px solid #000000;" height="300"
             id="tceffect" name="tceffect" dojoType="Editor2" focusOnLoad="false">
-[% case.text.effect FILTER quoteUrls %]</textarea>     
+[% case.text.effect FILTER none %]</textarea>     
   <p align="right">
     <input type="SUBMIT" name="action" class="tr_button" value="[% action FILTER html %]">
   </p>
