--- a/webtools/testopia/template/en/default/testopia/plan/show.html.tmpl
+++ b/webtools/testopia/template/en/default/testopia/plan/show.html.tmpl
@@ -149,7 +149,7 @@
     <tr class="bz_row_data">
       <td><a href="mailto:[% plan.author.email FILTER html %]">[% plan.author.identity FILTER html %]</a></td>
       <td>[% plan.version FILTER html %]</td>
-      <td>[% plan.type FILTER html %]</td>
+      <td>[% plan.plan_type FILTER html %]</td>
     </tr>
     <tr class="bz_row_data">
       <td colspan="3"><div align="right">
