--- a/webtools/testopia/template/en/default/testopia/plan/table.html.tmpl
+++ b/webtools/testopia/template/en/default/testopia/plan/table.html.tmpl
@@ -54,7 +54,7 @@ Select:
   <td>[% plan.creation_date FILTER time %]</td>
   <td>[% plan.product_name FILTER html%]</td>
   <td>[% plan.product_version FILTER html%]</td>
-  <td align="center">[% plan.type FILTER html %]</td>
+  <td align="center">[% plan.plan_type FILTER html %]</td>
   <td align="center">
     <a href="tr_list_cases.cgi?plan_id=[% plan.plan_id FILTER none %]">[% plan.test_case_count FILTER html %]</a>
   </td>
