Make links to create categories and builds open in a new window.

--- a/webtools/testopia/template/en/default/testopia/case/form.html.tmpl
+++ b/webtools/testopia/template/en/default/testopia/case/form.html.tmpl
@@ -96,7 +96,7 @@
     </tr>
 
     <tr>
-      <td align="right"><b><a href="tr_categories.cgi?plan_id=[% case.plans.0.id %]">Category</a></b></td>
+      <td align="right"><b><a href="tr_categories.cgi?plan_id=[% case.plans.0.id %]" target="_blank">Category</a></b></td>
       <td>
         [% PROCESS select sel = { name      => 'category',
                                   accesskey => 'c', 
