--- a/webtools/testopia/template/en/default/testopia/plan/show.html.tmpl
+++ b/webtools/testopia/template/en/default/testopia/plan/show.html.tmpl
@@ -174,9 +174,9 @@
 <div id="plan_categories">
 <table width="100%" border="0">
   <tr class="bz_row_header">
-    <th><a href="tr_categories.cgi?plan_id=[% plan.id FILTER none %]">Categories</a></th>
+    <th><a href="tr_categories.cgi?plan_id=[% plan.id FILTER none %]" target="_blank">Categories</a></th>
     <th><a href="tr_tags.cgi?id=[% plan.id FILTER none %]&type=plan">Tags</a></th>
-    <th><a href="tr_builds.cgi?plan_id=[% plan.id FILTER none %]">Builds</a></th>
+    <th><a href="tr_builds.cgi?plan_id=[% plan.id FILTER none %]" target="_blank">Builds</a></th>
   </tr>
   <tr>
     <td align="left">
@@ -211,8 +211,8 @@
     
   </tr>
   <tr>
-    <td align="left"><a href="tr_categories.cgi?plan_id=[% plan.id FILTER none %]&action=add">Add</a></p></td>
-    <td align="right"><a href="tr_builds.cgi?plan_id=[% plan.id FILTER none %]&action=add">Add</a></p></td>
+    <td align="left"><a href="tr_categories.cgi?plan_id=[% plan.id FILTER none %]&action=add" target="_blank">Add</a></p></td>
+    <td align="right"><a href="tr_builds.cgi?plan_id=[% plan.id FILTER none %]&action=add" target="_blank">Add</a></p></td>
   </tr>
 </table>
 </div>
