Added reports of bugs associated with runs and plans.

--- a/webtools/testopia/template/en/default/testopia/plan/show.html.tmpl
+++ b/webtools/testopia/template/en/default/testopia/plan/show.html.tmpl
@@ -254,10 +254,13 @@
 [%### Reports ###%]
 <br><br>
 <h3>Reports</h3>
-<a href="tr_plan_reports.cgi?plan_id=[% plan.id FILTER none %]&type=build_coverage">Build Coverage</a>
-<a href="tr_query.cgi?current_tab=plan&report=1">General Reports</a>
+<a href="tr_plan_reports.cgi?plan_id=[% plan.id FILTER none %]&type=build_coverage">Build Coverage</a><br/>
+<a href="tr_query.cgi?current_tab=plan&report=1">General Reports</a><br/>
+[% IF plan.bugs %]
+<a href="buglist.cgi?bug_id=[% plan.bug_list FILTER none %]">Bugs Found in this Plan</a><br>
+[% END %]
 [%##### Edit Plan #####%]
-<br><br>
+<br>
 [% IF plan.canedit %]
 <h3>Attributes</h3>
 <div id="edit_plan">
